# mbquide

./: .gitignore  README.md  start.sh
backend/: CMakeLists.txt  README.md
backend/include/: Flow.hpp  MBQC2ZX.hpp  MBQC_Graph.hpp  OutputAdjustments.hpp  QASM_Parser.hpp  Quantum_Circuit.hpp  Simulator.hpp  Statevector.hpp  ZX2MBQC.hpp  ZX_Graph.hpp  test_helpers.hpp  utils.hpp
backend/src/: server.cpp  utils.cpp
backend/src/QASM/: MBQC2ZX.cpp  QASM_Parser.cpp  Quantum_Circuit.cpp  ZX2MBQC.cpp  ZX_Graph.cpp
backend/src/graph/: Flow.cpp  MBQC_Graph.cpp  OutputAdjustments.cpp
backend/test/: compare_tensors.py  test_MBQC.cpp  test_Simulator.cpp  test_Statevector.cpp  test_outAdj.cpp
frontend/: README.md  index.html  package.json
frontend/src/: home.tsx  index.css  main.tsx
frontend/src/apps/: QASM_Input_App.tsx  Simulator_App.tsx  ZX_App.tsx
frontend/src/apps/MBQC/: index.tsx  types.ts
frontend/src/apps/MBQC/api/: graphApi.ts  operations.ts
frontend/src/apps/MBQC/hooks/: useGraphApi.ts  useGraphHistory.ts  useGraphState.ts  useGraphValidation.ts
frontend/src/apps/MBQC/ui/: buildingModeToggle.tsx
frontend/src/apps/MBQC/utils/: positioning.ts  transforms.ts
frontend/src/components/: Buttons.tsx  ControlPanel.tsx  Icons.tsx  LoadingOverlay.tsx  QASMControls.tsx
frontend/src/components/Graph/: index.tsx  types.ts
frontend/src/components/Graph/hooks/: useContextMenu.ts  useGraphSimulation.ts  useOutputTables.ts
frontend/src/components/Graph/interactions/: brushBehavior.ts  dragBehavior.ts  edgeCreation.ts  exampleDrag.ts  nodeInteractions.ts
frontend/src/components/Graph/rendering/: renderEdges.ts  renderExamples.ts  renderFilters.ts  renderLabels.ts  renderNodes.ts
frontend/src/components/Graph/ui/: ContextMenu.tsx  OutputTable.tsx  phaseInputMode.tsx
frontend/src/components/Graph/utils/: colors.ts  constants.ts  functions.ts
frontend/src/components/Simulator/: StateInput.tsx  Statevector.tsx  index.tsx  types.ts
frontend/src/components/Simulator/hooks/: useSimulatorRendering.ts
frontend/src/components/Simulator/rendering/: renderLabels.ts
frontend/src/components/Simulator/ui/: OutputTable.tsx
frontend/src/components/Simulator/utils/: colors.ts
frontend/src/styles/: graph.css
